// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Breadcrumb Basic BreadCrumb renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <Tag
      code={true}
      text=".breadcrumb"
      type="secondary"
    />
     to a containing 
    <Tag
      code={true}
      text="<ol>"
      type="primary"
    />
     element and nest a 
    <Tag
      code={true}
      text="<a>"
      type="primary"
    />
     or 
    <Tag
      code={true}
      text="<span>"
      type="primary"
    />
     element inside the 
    <Tag
      code={true}
      text="<li>"
      type="primary"
    />
     elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Breadcrumb
      items={
        Array [
          Object {
            "href": "#",
            "title": "Home",
          },
          Object {
            "href": "#",
            "title": "Products",
          },
          Object {
            "href": "#",
            "title": "Gadgets",
          },
          Object {
            "title": "Gadget #1",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Breadcrumb Disabled BreadCrumb renders 1`] = `
<Fragment>
  <h2
    id="disable-a-breadcrumb"
  >
    Disable a breadcrumb
  </h2>
  <p>
    To disable a breadcrumb element, simply use a 
    <Tag
      code={true}
      text="<span>"
      type="primary"
    />
     element within the 
    <Tag
      code={true}
      text="<li>"
      type="primary"
    />
     element (will not work for last-child).
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Breadcrumb
      items={
        Array [
          Object {
            "href": "#",
            "title": "Home",
          },
          Object {
            "title": "Products",
          },
          Object {
            "href": "#",
            "title": "Gadgets",
          },
          Object {
            "title": "Gadget #1",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Breadcrumb renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Breadcrumbs are a good way to display your current location. This is usually used when you have multiple layers of content.
  </p>
  <BasicBreadCrumb />
  <DisabledBreadcrumb />
</DocContainer>
`;
